--- a/booking/src/AppBundle/Resources/views/Welcome/about.html.twig
+++ b/booking/src/AppBundle/Resources/views/Welcome/about.html.twig
@@ -1,13 +1,17 @@
-<h1>About us</h1>
+{% extends 'AppBundle::layout.html.twig' %}
 
-  <p>
-    PHP Academy Booking is sample web application for demonstration of Symfony 3 web framework functionality.
+{% block content %}
+    <h1>About us</h1>
 
-    PHP Academy is organized by <a href="http://www.adriatic.hr">Adriatic.hr</a> from december 2016 until february 2017.
-  </p>
-  <p>
-    You may contact us via phone: +385 21 456 456
-    <br />or email: hr@adriatic.hr
-  </p>
+    <p>
+        PHP Academy Booking is sample web application for demonstration of Symfony 3 web framework functionality.
 
-<a href="{{ path('AppBundle_Welcome_homepage') }}">Back to home</a>
+        PHP Academy is organized by <a href="http://www.adriatic.hr">Adriatic.hr</a> from december 2016 until february 2017.
+    </p>
+    <p>
+        You may contact us via phone: +385 21 456 456
+        <br />or email: hr@adriatic.hr
+    </p>
+
+    <a href="{{ path('AppBundle_Welcome_homepage') }}">Back to home</a>
+{% endblock content %}
