--- a/booking/src/AppBundle/Resources/views/Welcome/homepage.html.twig
+++ b/booking/src/AppBundle/Resources/views/Welcome/homepage.html.twig
@@ -5,7 +5,7 @@
 
     <p>
         {{ rot13function('Welcome! Take a look at our')|rot13filter }}
-        <a href="{{ path('AppBundle_Accommodation_accommodation', {'accommodationId': 1}) }}">accommodation offer</a>.
+        <a href="{{ path('AppBundle_Accommodation_accommodationList') }}">accommodation offer</a>.
     </p>
 
     <a href="{{ path('AppBundle_Welcome_about') }}">About us.</a>
