--- a/booking/src/AppBundle/Resources/views/Accommodation/accommodation.html.twig
+++ b/booking/src/AppBundle/Resources/views/Accommodation/accommodation.html.twig
@@ -30,6 +30,31 @@
                 {{ accommodation.description }}
             </p>
             {{ helper.printPrice(accommodation.pricePerDay) }}
+
+            <div class="kalendarWrap">
+                <table class="kalendar">
+                    <caption>July</caption>
+                    <thead>
+                        <tr>
+                            <th>Mon</th>
+                            <th>Tue</th>
+                            <th>Wed</th>
+                            <th>Thu</th>
+                            <th>Fri</th>
+                            <th class="weekend">Sat</th>
+                            <th class="weekend">Sun</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% set month = 7 %}
+                        {% for day in generateDatesForMonth(month, 'now'|date('Y')) %}
+                            {% if loop.index % 7 == 1 %}<tr>{% endif %}
+                                <td class="{{ getDayClass(day, month, reservedDates) }}">{{ day.format('d') }}</td>
+                            {% if loop.index % 7 == 0 %}</tr>{% endif %}
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 
