--- a/booking/src/AppBundle/Resources/views/Accommodation/accommodationList.html.twig
+++ b/booking/src/AppBundle/Resources/views/Accommodation/accommodationList.html.twig
@@ -7,7 +7,7 @@
         {% for accommodation in accommodations %}
             <a href="{{ path('AppBundle_Accommodation_accommodation', {'accommodationId': accommodation.id}) }}"
                 class="col-2 white kartica">
-                <img src="{{ asset('images/accommodation/apartman' ~ accommodation.id ~ '.jpg') }}"
+                <img src="{{ path('AppBundle_Accommodation_mainImage', {'accommodationId': accommodation.id}) }}"
                     alt="Apartment image" />
                 <h4>
                     {{ accommodation.name }}
