--- a/booking/src/AppBundle/Resources/views/layout.html.twig
+++ b/booking/src/AppBundle/Resources/views/layout.html.twig
@@ -11,7 +11,7 @@
         </a>
 
         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-            <a href="{{ path('logout') }}" class="prijavaOdjava">Logout</a>
+            <a href="{{ path('logout') }}" class="prijavaOdjava">{{ app.user.name }} {{ app.user.surname }} - Logout</a>
         {% else %}
             <a href="{{ path('AppBundle_Security_login') }}" class="prijavaOdjava">Login</a>
         {% endif %}
