refaktorirao renderiranje kalendara dostupnosti

--- a/booking/src/AppBundle/Resources/views/Accommodation/accommodation.html.twig
+++ b/booking/src/AppBundle/Resources/views/Accommodation/accommodation.html.twig
@@ -33,28 +33,11 @@
             {{ helper.printPrice(accommodation.pricePerDay) }}
 
             <div class="kalendarWrap">
-                <table class="kalendar">
-                    <caption>July</caption>
-                    <thead>
-                        <tr>
-                            <th>Mon</th>
-                            <th>Tue</th>
-                            <th>Wed</th>
-                            <th>Thu</th>
-                            <th>Fri</th>
-                            <th class="weekend">Sat</th>
-                            <th class="weekend">Sun</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% set month = 7 %}
-                        {% for day in generateDatesForMonth(month, 'now'|date('Y')) %}
-                            {% if loop.index % 7 == 1 %}<tr>{% endif %}
-                                <td class="{{ getDayClass(day, month, reservedDates) }}">{{ day.format('d') }}</td>
-                            {% if loop.index % 7 == 0 %}</tr>{% endif %}
-                        {% endfor %}
-                    </tbody>
-                </table>
+                {{ include('AppBundle:Accommodation:calendar.html.twig', {
+                    'month': 7,
+                    'year': 'now'|date('Y'),
+                    'reservedDates': reservedDates,
+                }, with_context = false) }}
             </div>
         </div>
     </div>
