--- a/booking/src/AppBundle/Resources/views/Accommodation/calendar.html.twig
+++ b/booking/src/AppBundle/Resources/views/Accommodation/calendar.html.twig
@@ -1,8 +1,8 @@
 <table class="kalendar">
     <caption>{{ getMonthName(month) }}</caption>
 
-    <div class="arrowPrev"></div>
-    <div class="arrowNext"></div>
+    <div class="arrowPrev changeMonth" id="prevMonth" data-month="{{ getPreviousMonth(month, year) }}"></div>
+    <div class="arrowNext changeMonth" id="nextMonth" data-month="{{ getNextMonth(month, year) }}"></div>
 
     <thead>
         <tr>
