--- a/booking/app/Resources/views/base.html.twig
+++ b/booking/app/Resources/views/base.html.twig
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <title>{% block title %}{% endblock %} | Booking - PHP Akademija</title>
 
+        <script src="{{ asset('js/jquery/jquery.min.js') }}"></script>
         {% block stylesheets %}{% endblock %}
 
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
