--- a/booking/src/AppBundle/Resources/views/Accommodation/calendar.html.twig
+++ b/booking/src/AppBundle/Resources/views/Accommodation/calendar.html.twig
@@ -1,5 +1,5 @@
 <table class="kalendar">
-    <caption>{{ getMonthName(month) }}</caption>
+    <caption>{{ getMonthName(month) }}, {{ year }}</caption>
 
     <div class="arrowPrev changeMonth" id="prevMonth" data-month="{{ getPreviousMonth(month, year) }}"></div>
     <div class="arrowNext changeMonth" id="nextMonth" data-month="{{ getNextMonth(month, year) }}"></div>
