ajax za dohvaćanje login/logout botuna

--- a/booking/src/AppBundle/Resources/views/Accommodation/accommodation.html.twig
+++ b/booking/src/AppBundle/Resources/views/Accommodation/accommodation.html.twig
@@ -47,6 +47,7 @@
 {% endblock %}
 
 {% block javascripts %}
+    {{ parent() }}
     <script src="{{ asset('js/calendar.js') }}"></script>
     <script type="text/javascript">
     /* <![CDATA[ */
@@ -67,4 +68,4 @@
         });
     /* ]]> */
     </script>
-{% endblock %}
+{% endblock javascripts %}
