--- a/booking/web/css/akademija.css
+++ b/booking/web/css/akademija.css
@@ -416,6 +416,10 @@ option {
 	font-size: 16px
 }
 
+.hidden {
+	display: none;
+}
+
 @media screen and (min-width: 600px) {
 	#main {
 		padding: 35px;
