sitni refaktoring ajax-a za dohvaćanje user button-a

--- a/booking/src/AppBundle/Resources/views/layout.html.twig
+++ b/booking/src/AppBundle/Resources/views/layout.html.twig
@@ -13,7 +13,7 @@
         <span id="userButtonContainer"></span>
 
         <span id="userButtonTemplate" class="hidden">
-            <a href="__PATH__" class="prijavaOdjava">__USER_NAME__ __USER_SURNAME__ __BUTTON_TITLE__</a>
+            <a href="__PATH__" class="prijavaOdjava">__USER_NAME__ __USER_SURNAME__ __ACTION__</a>
         </span>
     </header>
     <div id="main">
